--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Alles gute zum Geburtstag!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+       <h1>Alles gute zum Geburtstag!</h1>
+       <br>
+       <img src="https://media.istockphoto.com/id/1349637354/de/vektor/leckerer-kuchen-mit-kerzen-f%C3%BCr-die-geburtstagsfeier-s%C3%BC%C3%9Fe-torte-mit-glasurcreme-auf-dem.jpg?s=612x612&w=0&k=20&c=SewtcS78eAC9yG8MeJie6wFPEXhiBp_gnXQswYgpgyY=" alt="Gebtor">
+    </div>
+</body>
+</html>
