--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-       <h1>Alles gute zum Geburtstag!</h1>
-       <br>
+    <div class="Header">
+      <h1>Alles gute zum Geburtstag!</h1>  
+    </div>
+    <div class="Box">
        <img class="bruh" src="https://media.istockphoto.com/id/1349637354/de/vektor/leckerer-kuchen-mit-kerzen-f%C3%BCr-die-geburtstagsfeier-s%C3%BC%C3%9Fe-torte-mit-glasurcreme-auf-dem.jpg?s=612x612&w=0&k=20&c=SewtcS78eAC9yG8MeJie6wFPEXhiBp_gnXQswYgpgyY=" alt="Gebtor">
     </div>
 </body>
