--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="Header">
-      <h1>Alles gute zum Geburtstag!</h1>  
+      <h1>Alles gute zum Geburtstag Oma!</h1>  
     </div>
     <div class="Box">
        <img class="bruh" src="https://media.istockphoto.com/id/1349637354/de/vektor/leckerer-kuchen-mit-kerzen-f%C3%BCr-die-geburtstagsfeier-s%C3%BC%C3%9Fe-torte-mit-glasurcreme-auf-dem.jpg?s=612x612&w=0&k=20&c=SewtcS78eAC9yG8MeJie6wFPEXhiBp_gnXQswYgpgyY=" alt="Gebtor">
