--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oma's Geburtstag</title>
     <link rel="stylesheet" href="style.css
-    <link rel="icon" href="https://media.istockphoto.com/id/1349637354/de/vektor/leckerer-kuchen-mit-kerzen-f%C3%BCr-die-geburtstagsfeier-s%C3%BC%C3%9Fe-torte-mit-glasurcreme-auf-dem.jpg?s=612x612&w=0&k=20&c=SewtcS78eAC9yG8MeJie6wFPEXhiBp_gnXQswYgpgyY=" type="image/x-icon">
+    <link rel="icon" href="istockphoto-1349637354-612x612-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
     <div class="Header">
       <h1>Alles gute zum Geburtstag Oma!</h1>  
     </div>
     <div class="Box">
-       <img class="bruh" src="https://media.istockphoto.com/id/1349637354/de/vektor/leckerer-kuchen-mit-kerzen-f%C3%BCr-die-geburtstagsfeier-s%C3%BC%C3%9Fe-torte-mit-glasurcreme-auf-dem.jpg?s=612x612&w=0&k=20&c=SewtcS78eAC9yG8MeJie6wFPEXhiBp_gnXQswYgpgyY=" alt="Gebtor">
+       <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
     </div>
 </body>
 </html>
