--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="Header">
-      <h1>Alles gute zum Geburtstag Oma!</h1>  
+      <a>Alles gute zum Geburtstag Oma!</a>  
     </div>
     <div class="Box">
        <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
