--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oma's Geburtstag</title>
-    <link rel="stylesheet" href="style.css>
     <link rel="icon" href="istockphoto-1349637354-612x612-removebg-preview.png" type="image/x-icon" alt="ICON">
 </head>
 <body>
@@ -16,4 +15,9 @@
        <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
     </div>
 </body>
+<style>
+    .Header {
+    
+    }
+</style>
 </html>
