--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 </body>
 <style>
     .Header {
-    
+    padding: 20px;
+    -webkit-box-shadow: 5px 5px 20px 5px rgba(0,0,0,0.29); 
+    box-shadow: 5px 5px 20px 5px rgba(0,0,0,0.29);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background-color: rgba(246, 138, 138, 1);
+    color: rgba(0,0,0,1);
+    text-align: center;
+    font-size: 20px;
+    margin-right: 50px;
+    font-weight: 900;
     }
 </style>
 </html>
