--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
     top: 0;
     width: 100%;
     background-color: rgba(246, 138, 138, 1);
-    color: rgba(0,0,0,1);
     text-align: center;
     font-size: 20px;
     margin-right: 50px;
-    font-weight: 900;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #000000;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;   
     }
 </style>
 </html>
