--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
     font-variant: normal;
     text-transform: none;   
     }
+    
+    .Box {
+    padding: 10px;
+    left: 50%;
+    top: 50%;
+    backroundcolor: rbga(255, 255, 255, 1)
+        
+    }
 </style>
 </html>
