--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     padding: 10px;
     left: 50%;
     top: 50%;
-    backroundcolor: rbga(255, 255, 255, 1)
+    backroundcolor: rbga(255, 255, 255, 1);
         
     }
 </style>
