--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     
     .Box {
     padding: 10px;
-    left: 50%;
-    top: 50%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
     backroundcolor: rbga(255, 255, 255, 1);
         
     }
