--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div class="Header">
       <a>Alles gute zum Geburtstag Oma!</a>  
     </div>
-    <div class="Box">
-       <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
-    </div>
+    <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
 </body>
 <style>
     .Header {
@@ -39,12 +37,10 @@
     text-transform: none;   
     }
     
-    .Box {
-    padding: 10px;
+    .bruh {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    backroundcolor: rbga(255, 255, 255, 1);
         
     }
 </style>
