--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a>Alles gute zum Geburtstag Oma!</a>  
     </div>
     <img class="bruh" src="istockphoto-1349637354-612x612-removebg-preview.png" alt="Gebtor">
+    <a class="Cake">The Cake is a lie</a>
 </body>
 <style>
     .Header {
@@ -41,8 +42,11 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
-    top: 25px;
-        
+    margin-top: 75px;    
+    }
+    
+    .Cake {
+    font-size: 5px;
     }
 </style>
 </html>
