--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
     <link rel="icon" href="istockphoto-1349637354-612x612-removebg-preview.png" type="image/x-icon" alt="ICON">
 </head>
 <body>
+    <div class="Main">
+        <a>Sorry this Website is currently undergoing maintenance!</a>
+        <br>
+        <a>We'll be right back for you</a>
+    </div>
+    <div class="loader"></div>
 </body>
 <style>
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 </style>
 </html>
