--- a/index.html
+++ b/index.html
@@ -9,13 +9,47 @@
 </head>
 <body>
     <div class="Main">
-        <a>Sorry this Website is currently undergoing maintenance!</a>
+        <a id="m">Sorry this Website is currently undergoing maintenance!</a>
         <br>
-        <a>We'll be right back for you</a>
+        <a id="k">We'll be right back for you</a>
     </div>
     <div class="loader"></div>
 </body>
 <style>
+body {
+    background-image: url(Backround.jpg);
+}
+#m {
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 28px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: 	#ff9a00;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: italic;
+    font-variant: small-caps;
+    text-transform: none;
+}
+#k {
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 28px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: italic;
+    font-variant: small-caps;
+    text-transform: none;
+}
+.Main {
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: auto;
+    text-align: center;
+}
+
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
