--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 </body>
 <style>
 body {
-    background-image: url(Backround.jpg);
+    background: url(Backround.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 #m {
     font-family: "Arial Black", Gadget, sans-serif;
@@ -44,9 +48,8 @@ body {
     text-transform: none;
 }
 .Main {
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: auto;
+    margin: auto;
+    width: 50%;
     text-align: center;
 }
 
@@ -65,3 +68,4 @@ body {
 }
 </style>
 </html>
+
