--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </body>
 <style>
 body {
-    background: url(Backround.jpg) no-repeat center center fixed;
+    background: url(Background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -68,4 +68,5 @@ body {
 }
 </style>
 </html>
+
 
