--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oma's Geburtstag</title>
-    <link rel="icon" href="istockphoto-1349637354-612x612-removebg-preview.png" type="image/x-icon" alt="ICON">
+    <title>GLaD0S</title>
+    <link rel="icon" href="Logo.gif" type="image/x-icon" alt="ICON">
 </head>
 <body>
     <div class="Main">
         <a id="m">Sorry this Website is currently undergoing maintenance!</a>
-        <br>
-        <a id="k">We'll be right back for you</a>
     </div>
-    <div class="loader"></div>
 </body>
 <style>
 body {
@@ -28,19 +25,7 @@ body {
     font-size: 28px;
     letter-spacing: 2px;
     word-spacing: 2px;
-    color: 	#ff9a00;
-    font-weight: 400;
-    text-decoration: none;
-    font-style: italic;
-    font-variant: small-caps;
-    text-transform: none;
-}
-#k {
-    font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 28px;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-    color: #000000;
+    color: 	#000000;
     font-weight: 400;
     text-decoration: none;
     font-style: italic;
@@ -53,20 +38,6 @@ body {
     text-align: center;
 }
 
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 </style>
 </html>
-
 
