--- a/index.html
+++ b/index.html
@@ -9,37 +9,15 @@
     <link rel="icon" href="Logo.gif" type="image/x-icon" alt="ICON">
 </head>
 <body>
-    <div class="Main">
-        <a id="m">Sorry this Website is currently undergoing maintenance!</a>
+    <div class="header">
+
     </div>
 </body>
 <style>
-body {
-    background: url(Background.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-#m {
-    font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 28px;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-    color: 	#000000;
-    font-weight: 400;
-    text-decoration: none;
-    font-style: italic;
-    font-variant: small-caps;
-    text-transform: none;
-}
-.Main {
-    margin: auto;
-    width: 50%;
-    text-align: center;
-    margin-top: 20%;
-}
-
+    .header {
+        background-color: #d1d1d1;
+        padding: 10px;
+        color: #000;
+    }
 </style>
 </html>
-
