--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-
+        <img rel="Logoo" href="Logoo.png" alt="Logoo" class="imga">
     </div>
 </body>
 <style>
@@ -18,6 +18,10 @@
         background-color: #d1d1d1;
         padding: 10px;
         color: #000;
+    }
+
+    .imga {
+        filter: invert(1);
     }
 </style>
 </html>
