--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         padding: 10px;
         color: #000;
         width: 100%;
-    }
-
-    .imga {
-        filter: invert(1);
+        top: 0;
+        left: 0;
     }
 </style>
 </html>
