--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-        <img href="Logoo.png" alt="Logoo" class="imga">
+        <img src="Logoo.png" alt="Logoo" class="imga">
     </div>
 </body>
 <style>
