--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 <style>
     .header {
         background-color: #d1d1d1;
-        padding: 10px;
         color: #000;
         width: 100%;
         top: 0;
         left: 0;
+    }
+
+    .imga {
+        width: 10%;
+        height: auto;
     }
 </style>
 </html>
