--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         width: 100%;
         top: 0;
         left: 0;
+        position: fixed;
+        -webkit-box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.52); 
+        box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.52);
     }
 
     .imga {
