--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="header">
         <img src="Logoo.png" alt="Logoo" class="imga">
+        <button class="About">About Us</button>
+
     </div>
 </body>
 <style>
@@ -20,14 +22,27 @@
         width: 100%;
         top: 0;
         left: 0;
+        padding: 10px;
         position: fixed;
         -webkit-box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.52); 
         box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.52);
+        
     }
 
     .imga {
         width: 10%;
         height: auto;
     }
+
+    .About {
+        border-radius: 12px;
+        background-color: #000;
+        color: #0000;
+        transition-duration: 0,4s;
+    }
+     .About:hover {
+        background-color: #27a7d8;
+        color: #0000;
+     }
 </style>
 </html>
