--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         background-color: #000;
         color: #0000;
         transition-duration: 0,4s;
+        width: auto;
+        height: auto;
     }
      .About:hover {
         background-color: #27a7d8;
