--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         background-color: #000;
         color: #0000;
         transition-duration: 0,4s;
-        width: auto;
-        height: auto;
+        width: 15px;
+        height: 10px;
     }
      .About:hover {
         background-color: #27a7d8;
