--- a/index.html
+++ b/index.html
@@ -47,9 +47,31 @@
         border-radius: 12px;
         background-color: #000;
         color: #0000;
-        transition-duration: 0,4s;
+        transition-duration: 1,5s;
         width: 15px;
         height: 10px;
+    }
+     .About:hover {
+        background-color: #27a7d8;
+        color: #0000;
+     }
+
+    .imga {
+        width: 10%;
+        height: auto;
+    }
+
+    .About {
+        border-radius: 12px;
+        background-color: #000;
+        color: #0000;
+        transition-duration: 1s;
+        width: 15px;
+        height: 10px;
+        border: none;
+        text-align: center;
+        display: inline-block;
+
     }
      .About:hover {
         background-color: #27a7d8;
