--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
 <body>
     <div class="header">
         <img src="Logoo.png" alt="Logoo" class="imga">
-        <button class="About">About Us</button>
+        <button class="About">Testing</button>
 
+    </div>
+
+    <div class="content">
+        <a class="title">Welcome to the Aperture Science Enrichment Center</a>
+    </div>
+
+    <div class="TOS">
+        <a>By clicking on this website you are agreeing to our</a>
+        <a href="tos.html">Terms of Service</a> 
     </div>
 </body>
 <style>
@@ -37,6 +46,23 @@
         box-shadow: 0px 0px 40px 12px rgba(0,0,0,0.52);
         
     }
+    
+    .TOS {
+        font-size: xx-small;
+    }
+
+    .title {
+        font-family: "Arial Black", Gadget, sans-serif;
+        font-size: 28px;
+        letter-spacing: 2px;
+        word-spacing: 2px;
+        color: 	#000000;
+        font-weight: 400;
+        text-decoration: none;
+        font-style: italic;
+        font-variant: small-caps;
+        text-transform: none;
+    }
 
     .imga {
         width: 10%;
@@ -48,8 +74,8 @@
         background-color: #000;
         color: #0000;
         transition-duration: 1,5s;
-        width: 75px;
-        height: 45px;
+        width: 50px;
+        height: 100px;
     }
      .About:hover {
         background-color: #27a7d8;
