--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         height: auto;
     }
 
+    .content {
+        top: 0;
+        margin-top: 10%;
+    }
+
     .About {
         border-radius: 12px;
         background-color: #000;
@@ -105,3 +110,4 @@
      }
 </style>
 </html>
+
