--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         font-style: italic;
         font-variant: small-caps;
         text-transform: none;
-        text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF, 0 0 20px #49ff18, 0 0 30px #49FF18, 0 0 40px #49FF18, 0 0 55px #49FF18, 0 0 75px #49ff18, 0px -1px 8px #00A2FF;
+        text-shadow: 0px -1px 8px #00A2FF;
     }
 
     .imga {
