--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <a>By clicking on this website you are agreeing to our</a>
         <a href="tos.html">Terms of Service</a> 
     </div>
+
+    <a href="https://www.steamidfinder.com/lookup/76561199160648215/"><img src="https://www.steamidfinder.com/signature/76561199160648215.png" alt="Steam Profile badge for thej0craft: Get your our own Steam Signature at SteamIDFinder.com" title="Steam Profile badge for thej0craft: Get your our own Steam Signature at SteamIDFinder.com"/></a>
 </body>
 <style>
     body {
